samples/_failures_safe/1761254889_2939c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a850e4a8.c: In function ‘main’:
./samples/SAFE/__tmp_a850e4a8.c:152:37: error: expected ‘)’ at end of input
  152 |     for (int i = 0; i < log_count; i
      |         ~                           ^
      |                                     )
./samples/SAFE/__tmp_a850e4a8.c:152:5: error: expected declaration or statement at end of input
  152 |     for (int i = 0; i < log_count; i
      |     ^~~
